--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
 <title>Credit Card Fraud Detection Using ML Techniques & Comparing</title>
-<link rel="stylesheet" href="/assets/css/style.css">
+<link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <div class="navbar">
